# my_final_project

./: .env_example  config.py  dao.py  database.py  main.py  my_project03052024.sqlite3  pyproject.toml
api/: api_travels.py  api_users.py
securiry/: security.py
templates/: base.html  cart.html  index.html  index_search.html  login.html  navbar.html  search.html
utils/: jwt_auth.py
web/: web_travels.py
web_router/: web_travel_agency_travels.py
